corregido mobre de clase

--- a/src/app/components/results/results.component.html
+++ b/src/app/components/results/results.component.html
@@ -41,7 +41,7 @@
               <app-hand [hand]="(houseHand | async)"></app-hand>
             </ng-container>
             <ng-template #handBg>
-              <div class="handBg"></div>
+              <div class="hand-bg"></div>
             </ng-template>
             
           </div>
