--- a/src/app/components/rules-modal/rules-modal.component.html
+++ b/src/app/components/rules-modal/rules-modal.component.html
@@ -6,8 +6,8 @@
 
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
-    <div class="modal-content bg-white p-4">
-      <div class="m-3 grid-container">
+    <div class="modal-content d-flex bg-white p-4">
+      <div class="m-3 grid-container flex-grow-1">
         
         <div class="grid-1">
           <h1 class="fw-700 dark-text rules-title m-0">RULES</h1>
