--- a/src/app/components/rules-modal/rules-modal.component.html
+++ b/src/app/components/rules-modal/rules-modal.component.html
@@ -18,7 +18,7 @@
           </button>
         </div>
         <div class="grid-3">
-          <img class="img-fluid py-4 m-auto" src="../../../assets/images/image-rules-bonus.svg" alt="">
+          <img class="img-fluid py-4 m-auto w-100" src="../../../assets/images/image-rules-bonus.svg" alt="">
         </div>
 
       </div>
