corregido color btn play again

--- a/src/app/components/results/results.component.css
+++ b/src/app/components/results/results.component.css
@@ -49,7 +49,7 @@
 }
 
 .play-again-btn:hover {
-  background-color: rgb(224, 224, 224);
+  background-color: rgb(224, 224, 224) !important;
 }
 
 .ficha-container {
