agregado link a github

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,7 +26,14 @@
       </div>
     </div>
   </ng-template>
-  
-  <app-rules-modal></app-rules-modal>
+
+  <footer class="footer d-flex align-items-center">
+    <button class="bg-transparent border-0 p-0 m-0">
+      <a class="decoration-none text-white" href="https://github.com/fedev95" target="_blank">
+        <i class="fa-brands fa-github fa-2x"></i>
+      </a>
+    </button>
+    <app-rules-modal></app-rules-modal>
+  </footer>
 
 </div>
